--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,7 +23,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "removeComments": false,
-    "noEmitOnError": true
+    "noEmitOnError": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
